--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="w-full max-w-xs">
+    <h3 class="text-3xl font-semibold font-sans">The Chat Room</h3>
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="POST">
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+                Username
+            </label>
+            <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                id="username" type="text" placeholder="Username..." name="username" value="{{username}}">
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="code">
+                Room Code
+            </label>
+            <input
+                class="shadow appearance-none borde rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                id="code" type="text" placeholder="Room Code..." name="code" value="{{code}}">
+        </div>
+        <div class="flex items-center justify-between">
+            <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                name="join" type="submit">
+                Join Room
+            </button>
+            <button
+                class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                name="create" type="submit">
+                Create Room
+            </button>
+        </div>
+    </form>
+</div>
 {% endblock content %}
