Changed files(check diff), basic thing working

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,10 @@
                 Create Room
             </button>
         </div>
+        <div class="my-4">
+            {{error}}
+        </div>
     </form>
+
 </div>
 {% endblock content %}
