--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container my-4 mx-auto">
+    <div class="container my-4">
         {%block content%}{%endblock content%}
     </div>
 </body>
